Cleaning code base.