@@ -114,7 +114,7 @@ public class AbstractExtractorDialog extends javax.swing.JDialog {
     public void registerSource(String name, Component component, int id) {
         if(component == null) return;
         if(registeredSources.get(component) == null) {
-            registeredSources.put(component, new Integer(id));
+            registeredSources.put(component, Integer.valueOf(id));
             tabbedSourcePane.addTab(name, component);
         }
     }
