@@ -476,7 +476,7 @@ public class PingerPanel extends javax.swing.JPanel {
         delayField.setFormatterFactory(new javax.swing.text.DefaultFormatterFactory(new javax.swing.text.NumberFormatter(new java.text.DecimalFormat("#0"))));
         delayField.setHorizontalAlignment(javax.swing.JTextField.CENTER);
         delayField.setPreferredSize(new java.awt.Dimension(6, 23));
-        delayField.setValue(new Integer(10));
+        delayField.setValue(Integer.valueOf(10));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 3;
@@ -523,7 +523,7 @@ public class PingerPanel extends javax.swing.JPanel {
         yearField.setHorizontalAlignment(javax.swing.JTextField.CENTER);
         yearField.setMinimumSize(new java.awt.Dimension(30, 20));
         yearField.setPreferredSize(new java.awt.Dimension(30, 23));
-        yearField.setValue(new Integer(5));
+        yearField.setValue(Integer.valueOf(5));
         yearField.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 yearFieldActionPerformed(evt);
@@ -549,7 +549,7 @@ public class PingerPanel extends javax.swing.JPanel {
         monthField.setMaximumSize(new java.awt.Dimension(10, 20));
         monthField.setMinimumSize(new java.awt.Dimension(10, 20));
         monthField.setPreferredSize(new java.awt.Dimension(10, 23));
-        monthField.setValue(new Integer(5));
+        monthField.setValue(Integer.valueOf(5));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 3;
         gridBagConstraints.gridy = 5;
@@ -570,7 +570,7 @@ public class PingerPanel extends javax.swing.JPanel {
         dayField.setMaximumSize(new java.awt.Dimension(10, 20));
         dayField.setMinimumSize(new java.awt.Dimension(10, 20));
         dayField.setPreferredSize(new java.awt.Dimension(10, 23));
-        dayField.setValue(new Integer(5));
+        dayField.setValue(Integer.valueOf(5));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 4;
         gridBagConstraints.gridy = 5;
@@ -591,7 +591,7 @@ public class PingerPanel extends javax.swing.JPanel {
         hoursField.setMaximumSize(new java.awt.Dimension(10, 20));
         hoursField.setMinimumSize(new java.awt.Dimension(10, 20));
         hoursField.setPreferredSize(new java.awt.Dimension(10, 23));
-        hoursField.setValue(new Integer(5));
+        hoursField.setValue(Integer.valueOf(5));
         hoursField.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 hoursFieldActionPerformed(evt);
@@ -617,7 +617,7 @@ public class PingerPanel extends javax.swing.JPanel {
         minutesField.setMaximumSize(new java.awt.Dimension(10, 20));
         minutesField.setMinimumSize(new java.awt.Dimension(10, 20));
         minutesField.setPreferredSize(new java.awt.Dimension(10, 23));
-        minutesField.setValue(new Integer(5));
+        minutesField.setValue(Integer.valueOf(5));
         minutesField.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 minutesFieldActionPerformed(evt);
@@ -643,7 +643,7 @@ public class PingerPanel extends javax.swing.JPanel {
         secondsField.setMaximumSize(new java.awt.Dimension(10, 20));
         secondsField.setMinimumSize(new java.awt.Dimension(10, 20));
         secondsField.setPreferredSize(new java.awt.Dimension(10, 23));
-        secondsField.setValue(new Integer(5));
+        secondsField.setValue(Integer.valueOf(5));
         secondsField.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 secondsFieldActionPerformed(evt);
