@@ -59,7 +59,7 @@ public class TextBox {
     }
     
     public String charToStr(int c){
-        return new Character((char)c).toString();
+        return Character.valueOf((char)c).toString();
     }
     public String repeat(String s,int times){
         String r="";
